@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST xfce4-dev-tools-4.5.92.tar.bz2 62206 RMD160 07ae579d9e095d5c0801563e58152153b0dce095 SHA1 c37bc3090a7d8e6a0c1809b8658870931557135b SHA256 b9e95023ece242cf82c42387e50ba2ca6ee969419ca57b318bf2727e3e9e0bba
-EBUILD xfce4-dev-tools-4.5.92.ebuild 411 RMD160 1d5acf3cf70a93ca04d7622668be07390e07baf6 SHA1 1695bc28ac831b876cd66a989f3dde48e1f5e692 SHA256 1325fff33330c89a8d5e0e17362e368cf02401aa929ce93c7219bae8a72119a6
-EBUILD xfce4-dev-tools-9999.ebuild 411 RMD160 1d5acf3cf70a93ca04d7622668be07390e07baf6 SHA1 1695bc28ac831b876cd66a989f3dde48e1f5e692 SHA256 1325fff33330c89a8d5e0e17362e368cf02401aa929ce93c7219bae8a72119a6
-MISC ChangeLog 358 RMD160 a1ae89a1f4b989e95271230e306161440b2273da SHA1 3fc3464ec879604cdfa5f9dd31bb151ff3b5e0ba SHA256 fb40448b8be1ba0530ad0ad9cc69d35a2937d1e010ca8414ba83581800e3dd70
+EBUILD xfce4-dev-tools-4.5.92.ebuild 439 RMD160 efb9514c027003485ac2d2de94679ef46ee3abf5 SHA1 4a918282ad733bb54835466047c3435ae36990e9 SHA256 1007f8fa67d69f6d8a875af33f048e36451e016a1597e6edbe5cd1854e0832de
+EBUILD xfce4-dev-tools-9999.ebuild 439 RMD160 efb9514c027003485ac2d2de94679ef46ee3abf5 SHA1 4a918282ad733bb54835466047c3435ae36990e9 SHA256 1007f8fa67d69f6d8a875af33f048e36451e016a1597e6edbe5cd1854e0832de
+MISC ChangeLog 520 RMD160 96d1d9bf652c518313bbc1a791a278fb08781f16 SHA1 159dce87679533803737a9cb301c94f3d8faad42 SHA256 96310e94d47e88427e6a5d9397f21797641467e31cea15751045754d08aec871
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkdtYQACgkQKhnDs22gwa9LlgCbBoL+YgUGlf3BAcdQ7LlPe5s6
-YJYAoOnbWRT3tUq2ZvoJ3aOjprUt0Pfk
-=YG3Q
+iEYEARECAAYFAkk8d58ACgkQKhnDs22gwa+UjwCdG0QB4KbTRkNAbkO899HZtlAa
+YdsAnib1U6wpxsknmp+K8RTZX6Hcxf3+
+=+04o
 -----END PGP SIGNATURE-----
