@@ -11,4 +11,6 @@ HOMEPAGE="http://foo-projects.org/~benny/projects/xfce4-dev-tools"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
 IUSE=""
 
+RDEPEND="dev-util/gtk-doc"
+
 DOCS="AUTHORS ChangeLog HACKING NEWS README"
